# web_socket

./: .buildpacks  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chroma_db.py  pyproject.toml  render.yaml  requirements.txt  server.py  test_openapi.py
app/: config.py  database.py  llm_service.py  main.py  models.py
static/: index.html
